--- a/pages/postdetails/postdetails.wxss
+++ b/pages/postdetails/postdetails.wxss
@@ -311,15 +311,16 @@ swiper-item image {
  .tankuang{
   /* border: 1px solid red; */
   width: 100%;
-  height: 30%;
+  height: 35%;
   position: fixed;
-  bottom: 40rpx;
+  bottom: 0rpx;
   left: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   z-index: 999;
+  overflow: hidden;
   float: none;
 }
 .tankuang view {
@@ -393,4 +394,20 @@ color: #fff;
   margin: 100rpx auto 0;
   box-shadow:#ccc 0rpx 0rpx 13px; 
   border-radius:10rpx;
-}  
+}
+.btn{
+line-height: 2.5rem;
+height: 2.5rem;
+width: 92%;
+text-align: center;
+background: #33A1FF;
+margin: 20rpx 4%;
+overflow: hidden;
+color: #fff;
+} 
+.dibu {
+  width:100%;
+  text-align: center;
+  font-size: 32rpx;
+  color: #999;
+}
